2230 [HD Streams Extractor] improved error handling
2229 [OneClick] fixed a problem during Blu-ray processing when source has no subtitle/audio track
2228 [OneClick] fixed a problem starting OneClick after a new install
2227 [MP4 Muxer] changed muxer to use the ISO 639-2/T language codes
2226 [HD Streams Extractor] fixed handling of input files with a + in the file name
2225 [MP4 Muxer] added better language support & several Apple devices tunings especially for chapters
2224 [Audio] removed faac & introduced qaac + opus encoders
2223 replaced the ISO 639-2 bibliographic language codes for German/French with the terminology ones (ger->deu, fre->fra)
2222 [Log] if Haali is not correctly installed a warning instead of an error will be logged
2221 [Log] added .NET 4.5 detection
2220 [OneClick] improved output container validation
                added subtitle support to MP4, AVI and M2TS container
2219 [Log] added Windows 8 detection
2217 [Update] fixed a problem if the automatic update check is disabled and components are missing
2216 [AVS Script Creator] fixed handling of custom FFMS index file location
2215 [OneClick] always mux output file
2214 [MKVExtract] fixed handling of input file name which contains error or warning
2213 [OneClick] added leading name option
2212 [DGIndexNV] added support for MP4 container (requires dgindexnv 2044+)
2211 [OneClick] optimized TrueHD handling with eac3to
2210 [OneClick] optimized job creation process when several tracks are used
2209 [AVS Script Creator] internal optimizations
2203 [OneClick] fixed missing internal subtitles during Blu-ray processing
2199 added check if Haali is correctly installed
2193 [Updater] some minor enhancements for offline mode
2192 [MediaInfo] ignore phantom TiVo audio tracks
2191 [OneClick] added AviSource() as way to process AVI files
     [File Indexer] added DFSC/VFW and CFHD/CINEFORM to the list of not by FFMS supported codecs